# Norse

./: legend
Asgard/: CMakeLists.txt  posixmain.cpp
Asgard/Thor/: CMakeLists.txt  Makefile  legend  thoInputHandler.cpp  thoMainWindow.cpp  thoPosixMain.cpp  thoQtMain.cpp  thoSerialization.hpp
Nidavellir/: Makefile  legend
Nidavellir/Hreidmar/: Makefile  chconf.h  halconf.h  hreMain.cpp  hreSerialization.hpp  mcuconf.h  testsysstubs.c
Ratatosk/: ratSerializableTypes.hpp  ratTypes.hpp
Yggdrasil/: yggChibiosTraits.hpp  yggConfig.hpp  yggDeserializer.hpp  yggDeviceBase.hpp  yggManager.hpp  yggPosixTraits.hpp  yggQtTraits.hpp  yggReplayManager.hpp  yggSerialDevice.hpp  yggSerializer.hpp  yggTransport.hpp  yggTransportImpl.hpp  yggTypeRegistry.hpp  yggTypes.hpp
asgard/: CMakeLists.txt  legend
asgard/thor/: CMakeLists.txt  thoInputHandler.cpp  thoInputHandler.hpp  thoMainWindow.hpp  thoPosixMain.cpp  thoQtMain.cpp  thoSerialization.hpp
nidavellir/: Makefile  Makefile.common
nidavellir/hreidmar/: .gdbinit  hreMain.cpp  hreSerialization.hpp  legend  sysstubs.c
ratatosk/: legend
yggdrasil/: legend  yggBaseTypes.hpp  yggChibiosTraits.hpp  yggDeserializer.hpp  yggPosixTraits.hpp  yggQtTraits.hpp  yggQueue.hpp  yggReplayManager.hpp  yggSerializationManager.hpp  yggSerializer.hpp  yggStreamBase.hpp  yggTransport.hpp  yggTransportImpl.hpp  yggTypeRegistry.hpp  yggTypes.hpp
